! Changed: toolbarBindings.xml binding rule commented

--- a/chrome/custombuttons/content/custombuttons/overlay.css
+++ b/chrome/custombuttons/content/custombuttons/overlay.css
@@ -1,7 +1,9 @@
 /*toolbar*/
+/*
 toolbar{
    -moz-binding: url("toolbarBindings.xml#custombuttons-toolbar-binding");
 }
+*/
 
 /********** toolbarbutton **********/
 
