! Changed: comment encoding

--- a/chrome/custombuttons/skin/classic/custombuttons.css
+++ b/chrome/custombuttons/skin/classic/custombuttons.css
@@ -1,7 +1,7 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
 /*
-* Использованы иконки из расширения "CuteMenus - Crystal SVG"
+* РСЃРїРѕР»СЊР·РѕРІР°РЅС‹ РєРЅРѕРїРєРё РёР· СЂР°СЃС€РёСЂРµРЅРёСЏ "CuteMenus - Crystal SVG"
 * (http://www.cutemenuproject.com/)
 */
 
