--- a/chrome/custombuttons/content/custombuttons/overlay.css
+++ b/chrome/custombuttons/content/custombuttons/overlay.css
@@ -1,14 +1,17 @@
 /********** toolbarbutton **********/
 
-toolbarbutton[id^='custombuttons-button'] {
+toolbarbutton[id^='custombuttons-button'],
+toolbarbutton[id^='wrapper-custombuttons-button']{
   -moz-binding: url("toolbarbutton.xml#toolbarbutton");
 }
 
-toolbarbutton[id^='custombuttons-button'][type="menu"] {
+toolbarbutton[id^='custombuttons-button'][type="menu"],
+toolbarbutton[id^='wrapper-custombuttons-button'][type="menu"]{
   -moz-binding: url("toolbarbutton.xml#menu");
 }
 
-toolbarbutton[id^='custombuttons-button'][type="menu-button"] {
+toolbarbutton[id^='custombuttons-button'][type="menu-button"],
+toolbarbutton[id^='wrapper-custombuttons-button'][type="menu-button"]{
   -moz-binding: url("toolbarbutton.xml#menu-button");
 }
 
