--- a/chrome/custombuttons/content/custombuttons/overlay1.5.css
+++ b/chrome/custombuttons/content/custombuttons/overlay1.5.css
@@ -1,5 +1,20 @@
-toolbarbutton[id^="custombuttons-button"][orient]
+toolbarbutton[id^="custombuttons-button"][orient],
+toolbarbutton[id^='wrapper-custombuttons-button'][orient]
 {
   -moz-binding: url("toolbarbutton.xml#menu-orient");
 }
 
+toolbarbutton[id^='custombuttons-button'],
+toolbarbutton[id^='wrapper-custombuttons-button']{
+  -moz-binding: url("chrome://custombuttons/content/toolbarbutton.xml#toolbarbutton");
+}
+
+toolbarbutton[id^='custombuttons-button'][type="menu"],
+toolbarbutton[id^='wrapper-custombuttons-button'][type="menu"]{
+  -moz-binding: url("chrome://custombuttons/content/toolbarbutton.xml#menu");
+}
+
+toolbarbutton[id^='custombuttons-button'][type="menu-button"],
+toolbarbutton[id^='wrapper-custombuttons-button'][type="menu-button"]{
+  -moz-binding: url("chrome://custombuttons/content/toolbarbutton.xml#menu-button");
+}
