--- a/chrome/custombuttons/content/custombuttons/overlay.css
+++ b/chrome/custombuttons/content/custombuttons/overlay.css
@@ -2,16 +2,20 @@
 
 toolbarbutton[id^='custombuttons-button'],
 toolbarbutton[id^='wrapper-custombuttons-button']{
-  -moz-binding: url("toolbarbutton.xml#toolbarbutton");
+  -moz-binding: url("chrome://custombuttons/content/toolbarbutton.xml#toolbarbutton");
 }
 
 toolbarbutton[id^='custombuttons-button'][type="menu"],
 toolbarbutton[id^='wrapper-custombuttons-button'][type="menu"]{
-  -moz-binding: url("toolbarbutton.xml#menu");
+  -moz-binding: url("chrome://custombuttons/content/toolbarbutton.xml#menu");
 }
 
 toolbarbutton[id^='custombuttons-button'][type="menu-button"],
 toolbarbutton[id^='wrapper-custombuttons-button'][type="menu-button"]{
-  -moz-binding: url("toolbarbutton.xml#menu-button");
+  -moz-binding: url("chrome://custombuttons/content/toolbarbutton.xml#menu-button");
 }
 
+toolbarbutton[id^='custombuttons-button'][type="menu-vertical"],
+toolbarbutton[id^='wrapper-custombuttons-button'][type="menu-vertical"]{
+  -moz-binding: url("chrome://custombuttons/content/toolbarbutton.xml#menu-vertical");
+}
