--- a/chrome/custombuttons/content/custombuttons/codeeditor.css
+++ b/chrome/custombuttons/content/custombuttons/codeeditor.css
@@ -6,3 +6,55 @@
 {
   -moz-binding: url("chrome://custombuttons/content/codeeditor.xml#accelkeytextboxbinding");
 }
+#accelkey[bExtendedMode="true"] > .textbox-input-box
+{
+	background-color: red;
+	opacity: 0.3;
+}
+
+.menulist-iconic
+{
+	-moz-binding: url("chrome://custombuttons/content/menulisticonic.xml#custombuttons-menulist-editable-iconic");
+}
+
+.menu-iconic-left
+{
+	display: -moz-box;
+	max-width: 20px;
+	max-height: 20px;
+	height: 16px;
+	width: 16px;
+	margin-right: 5px;
+}
+
+.menu-iconic-icon
+{
+	width: auto;
+	height: auto;
+}
+.menu-iconic-icon,
+.custombuttons-menulist-icon
+{
+	max-width: 16px;
+	max-height: 16px;
+}
+
+*[value="custombuttons-stdicon-1"]
+{
+	list-style-image: url("chrome://custombuttons/skin/button.png");
+}
+
+*[value="custombuttons-stdicon-2"]
+{
+	list-style-image: url("chrome://custombuttons/skin/stdicons/rbutton.png");
+}
+
+*[value="custombuttons-stdicon-3"]
+{
+	list-style-image: url("chrome://custombuttons/skin/stdicons/gbutton.png");
+}
+
+*[value="custombuttons-stdicon-4"]
+{
+	list-style-image: url("chrome://custombuttons/skin/stdicons/bbutton.png");
+}
