--- a/chrome/custombuttons/content/custombuttons/console.css
+++ b/chrome/custombuttons/content/custombuttons/console.css
@@ -1,9 +1,9 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
-.console-error-source[href^='custombutton://buttons/']{
+.console-error-source[href^='chrome://custombuttons/content/button.js']{
 	-moz-binding: url(chrome://custombuttons/content/custombuttonsConsoleBindings.xml#console-error-source);
 }
 
-richlistitem[href^='custombutton://buttons/']{
+richlistitem[href^='chrome://custombuttons/content/button.js']{
 	-moz-binding: url(chrome://custombuttons/content/custombuttonsConsoleBindings.xml#console2-error-source);
 }
