--- a/chrome/custombuttons/content/custombuttons/editor/console.css
+++ b/chrome/custombuttons/content/custombuttons/editor/console.css
@@ -13,27 +13,79 @@ richlistitem[href^='chrome://custombuttons/content/button.js']{
     -moz-binding: url(chrome://custombuttons/content/editor/console.xml#cb-error-console);
 }
 
-.console-box > .console-box-internal > console-rows > .console-row
+.console-box:not([mode~="Errors"]) > .console-box-internal > .console-rows > .console-row[type="error"]
 {
     display: none !important;
 }
 
-.console-box[mode~="Messages"] > .console-box-internal > .console-rows > .console-row[type="message"]
+.console-box:not([mode~="Messages"]) > .console-box-internal > .console-rows > .console-row[type="message"]
 {
-    display: -moz-box !important;
+    display: none !important;
 }
 
-.console-box[mode~="Errors"] > .console-box-internal > .console-rows > .console-row[type="error"]
+.console-box:not([mode~="Warnings"]) > .console-box-internal > .console-rows > .console-row[type="warning"]
 {
-    display: -moz-box !important;
-}
-
-.console-box[mode~="Warnings"] > .console-box-internal > .console-rows > .console-row[type="warning"]
-{
-    display: -moz-box !important;
+    display: none !important;
 }
 
 toolbarbutton
 {
     -moz-box-orient: vertical !important;
+}
+
+.console-rows {
+  -moz-user-focus: normal;
+}
+
+.console-row[type="error"],
+.console-row[type="warning"] {
+  -moz-binding: url("chrome://global/content/consoleBindings.xml#error");
+}
+
+.console-row[type="message"] {
+  -moz-binding: url("chrome://global/content/consoleBindings.xml#message");
+}
+
+.console-msg-text,
+.console-error-msg {
+  white-space: pre-wrap;
+}
+
+.console-error-source {
+  -moz-binding: url("chrome://global/content/consoleBindings.xml#console-error-source");
+}
+
+.console-dots {
+  width: 1px;
+}
+
+/* :::::::::: hiding and showing of rows for each mode :::::::::: */
+
+/*.console-box[mode="Warnings"] > .console-box-internal > .console-rows 
+    > .console-row[type="error"],
+.console-box[mode="Messages"] > .console-box-internal > .console-rows 
+    > .console-row[type="error"]
+{
+  display: none;
+}
+
+.console-box[mode="Errors"] > .console-box-internal > .console-rows 
+    > .console-row[type="warning"],
+.console-box[mode="Messages"] > .console-box-internal > .console-rows 
+    > .console-row[type="warning"]
+{
+  display: none;
+}
+
+.console-box[mode="Errors"] > .console-box-internal > .console-rows 
+    > .console-row[type="message"],
+.console-box[mode="Warnings"] > .console-box-internal > .console-rows 
+    > .console-row[type="message"]
+{
+  display: none;
+}*/
+
+/* If line number is 0, hide the line number section */
+.lineNumberRow[line="0"] {
+  display: none;
 }
