--- a/chrome/custombuttons/skin/classic/custombuttons.css
+++ b/chrome/custombuttons/skin/classic/custombuttons.css
@@ -46,6 +46,11 @@ toolbarbutton[id^='custombuttons-button'][cb-edit-state='active']{
     outline-offset: -4px !important;
 }
 
+toolbarbutton[id^='custombuttons-button'][cb-last-saved]{
+    outline: 3px groove red !important;
+    outline-offset: -4px !important;
+}
+
 menuitem[id^="custombuttons-contextpopup-"] {
    -moz-binding: url("chrome://global/content/bindings/menu.xml#menuitem-iconic") !important;
 }
