# Fixed: 'Alt+M' hotkey doesn't work in Firefox 3.6/4.0

--- a/chrome/custombuttons/content/custombuttons/codeeditor.css
+++ b/chrome/custombuttons/content/custombuttons/codeeditor.css
@@ -40,6 +40,10 @@ tabpanels
 .menulist-iconic
 {
 	-moz-binding: url("chrome://custombuttons/content/menulisticonic.xml#custombuttons-menulist-editable-iconic");
+}
+
+.menulist-iconic[focused=true]
+{
 	-moz-user-focus: ignore;
 }
 
