--- a/chrome/custombuttons/skin/classic/custombuttons.css
+++ b/chrome/custombuttons/skin/classic/custombuttons.css
@@ -37,7 +37,7 @@ toolbarbutton[id^='custombuttons-button'][initializeerror]{
 
 toolbarbutton[id^='custombuttons-button'][cb-edit-state='inactive']{
     opacity: 0.75 !important;
-    outline: 2px solid red !important;
+    outline: 2px dotted red !important;
     outline-offset: -3px !important;
 }
 
