Change addon type
--HG--
branch : bug24045

--- a/chrome/custombuttons/skin/classic/addons-overlay.css
+++ b/chrome/custombuttons/skin/classic/addons-overlay.css
@@ -1,14 +1,35 @@
-#category-custombuttons > .category-icon,
-.addon[type=user-custombuttons] .icon,
-#detail-view[type=user-custombuttons] #detail-icon
-{
-    list-style-image: url(chrome://custombuttons/skin/cbicon.png);
+#category-custombuttons > .category-icon {
+    list-style-image: url("chrome://custombuttons/skin/cbicon.png");
 }
 
-.addon.addon-view[type="custombuttons-button"] .details.button-link {
+.addon[type="custombuttons"] .icon {
+    list-style-image: url("chrome://custombuttons/skin/button.png");
+}
+
+.addon.addon-view[type="custombuttons"] .details.button-link {
   display: none !important;
 }
 
-#addonitem-popup[addontype="custombuttons-button"] #menuitem_showDetails {
+#addonitem-popup[addontype="custombuttons"] #menuitem_showDetails {
   display: none !important;
+}
+
+#custombuttons-sort-bar {
+    display: none;
+}
+
+#list-view[type="custombuttons"] #addon-list-empty[hidden] ~ #custombuttons-sort-bar {
+    display: -moz-box;
+}
+
+#custombuttons-no-buttons-block {
+    display: none;
+}
+
+#list-view[type="custombuttons"] #custombuttons-no-buttons-block {
+    display: -moz-box;
+}
+
+#list-view[type="custombuttons"] .alert {
+    display: none;
 }
