--- a/chrome/custombuttons/skin/classic/addons-overlay.css
+++ b/chrome/custombuttons/skin/classic/addons-overlay.css
@@ -14,6 +14,10 @@
   display: none !important;
 }
 
+page.custombuttons #addon-list-empty {
+    display: none;
+}
+
 #custombuttons-sort-bar {
     display: none;
 }
@@ -22,14 +26,10 @@
     display: -moz-box;
 }
 
-#custombuttons-no-buttons-block {
+#custombuttons-list-empty {
     display: none;
 }
 
-#list-view[type="custombuttons"] #custombuttons-no-buttons-block {
+#list-view[type="custombuttons"] #addon-list-empty:not([hidden]) ~ #custombuttons-list-empty {
     display: -moz-box;
-}
-
-#list-view[type="custombuttons"] .alert {
-    display: none;
 }
